--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -1,89 +1,58 @@
 <%- include('partials/header') -%>
 <!-- header image -->
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content grid col-span-1">
-    <div class="col-start-1">
-      <h1 class="text-5xl font-bold">Edit your profile!</h1>
+<div class="hero min-h-screen bg-base-200" style="background-image: url(/Images/funes-4984899.jpg);">
+  <div class="hero-content grid grid-cols-2">
+    <div class="col-start-1 col-span-2 justify-self-center ">
+      
     </div>
+    <div class="col-start-1 mx-10">
+      <img src="/Images/dog-983014_1920.jpg" class="max-w-sm rounded-lg shadow-2xl border-white border-4" />
+    </div>
+    <div class="col-start-2 justify-center mx-10">
     <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-      <div class="card-body grid col-span-2">
-
+      <div class="card-body col-span-2">
+        <div class="form-control">
+          <h1 class="text-3xl font-bold text-slate-900">Edit Profile</h1>
+          </div>
+        <form action="/editProfile/editProfile" enctype="multipart/form-data" method="POST">
         <div class="form-control">
           <label class="label">
-            <span class="label-text">User Name</span>
+            <span class="label-text text-slate-900">User Name</span>
           </label>
-          <input type="text" placeholder="User Name" class="input input-bordered" />
+          <input type="text" placeholder="User Name" class="input input-bordered"  id="userName" name="userName"/>
         </div>
 
         <div class="form-control">
           <label class="label">
-            <span class="label-text">Location</span>
+            <span class="label-text text-slate-900">Location</span>
           </label>
-          <input type="text" placeholder="Location" class="input input-bordered" />
+          <input type="text" placeholder="Location" class="input input-bordered" id="location" name="location"/>
         </div>
 
         <div class="form-control">
           <label class="label">
-            <span class="label-text">Location</span>
+            <span class="label-text text-slate-900">Bio</span>
           </label>
-          <textarea type="text" placeholder="About you" class="input input-bordered h-32"></textarea>
+          <textarea type="text" placeholder="Bio" class="input input-bordered h-32" id="bio" name="bio"></textarea>
+        </div>
+
+        <div>
+          <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="profileImage" name="profileImage" />
         </div>
 
         <div class="form-control mt-6">
-          <button class="btn btn-primary">Login</button>
+          <button class="btn btn-grey">Submit</button>
         </div>
+        </form>
+
+      </div>
       </div>
     </div>
   </div>
 </div>
 
 
-<div class="profile--header-container"></div>
-<!-- profile info banner -->
-<div class="w-full h-28 bg-slate-300 static">
-  <div class="avatar">
-    <div class="w-40 rounded absolute">
-      <img class="border-2" src="/Images/dog-983014_1920.jpg" />
-      <button class="container btn btn-outline mt-4">Button</button>
-    </div>
-    
-  </div>
-  <!-- Next steps to change to grid layout for this container -->
-  <div class="stats shadow">
-  
-    <div class="stat">
-      <div class="stat-figure text-primary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
-      </div>
-      <div class="stat-title">Total Likes</div>
-      <div class="stat-value text-primary">25.6K</div>
-    </div>
-    
-    <div class="stat">
-      <div class="stat-figure text-secondary">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block w-8 h-8 stroke-current"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-      </div>
-      <div class="stat-title">Page Views</div>
-      <div class="stat-value text-secondary">2.6M</div>
-    </div>
-  
-  </div>
-</div>
 
-<!-- Data bar -->
-
-<div class="container">
-  <div class="row mt-5">
-      <div class="col-6">
-          <div>
-              <p><strong>User Name</strong>: <%= user.userName %></p>
-              <!-- Shows user's username from the user collection. Pulls it with every request and displays in the DOM. -->
-              <p><strong>Email</strong>: <%= user.email %></p>
-              <!-- Shows user's email address from the user collection. Pulls it with every request and displays in the DOM. -->
-              <a href="/logout" class="col-3 btn btn-primary">Logout</a>
-              <!-- Button to log out -->
-          </div>
-          <div class="mt-5">
             <h2>Add a post</h2>
             <!-- Add a post heading -->
             <form action="/post/createPost" enctype="multipart/form-data" method="POST">
