--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -5,7 +5,8 @@
     <div class="">
       <div class="card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
-          <form action="/signup" method="POST">
+          <form action="/post/createPost" enctype="multipart/form-data" method="POST">
+            
 
           <div class="form-control">
             <h2 class="text-black text-2xl">Create a Post</h2>
@@ -33,20 +34,15 @@
             <label class="label">
               <span class="label-text">Caption</span>
             </label>
-            <textarea type="text" placeholder="caption" class="input input-bordered h-32" id="caption" name="caption"></textarea>
+            <textarea type="text" placeholder="caption" class="input input-bordered h-32 text-black" id="caption" name="caption"></textarea>
           </div>
 
           <div class="form-control">
             <label class="label">
-              <span class="label-text">Photo</span>
+              <span class="label-text">Image</span>
             </label>
             <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="imageUpload" name="file" />
           </div>
-
-          
-           
-          
-
 
           <div class="form-control mt-3">
             <button class="btn btn-grey">Post</button>
