--- a/public/style.css
+++ b/public/style.css
@@ -3677,6 +3677,10 @@ html {
   grid-column: span 3 / span 3;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .col-start-1 {
   grid-column-start: 1;
 }
@@ -3789,6 +3793,14 @@ html {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .inline-block {
@@ -3950,12 +3962,24 @@ html {
   gap: 1rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-y-3 {
   row-gap: 0.75rem;
 }
 
+.place-self-center {
+  place-self: center;
+}
+
 .self-center {
   align-self: center;
+}
+
+.justify-self-auto {
+  justify-self: auto;
 }
 
 .justify-self-center {
