--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -49,12 +49,19 @@
       <% for(var i=0; i<posts.length; i++) {%>
       <div class="card card-compact w-fit bg-slate-100 shadow-xl m-2">
         <figure class="h-60"><a href="/post/<%= posts[i]._id%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
-        <div class="card-body">
+        <div class="card-body flex grid grid-cols-3">
+          <div class="col-start-1 col-span-2">
           <h2 class="card-title"><%= posts[i].title%></h2>
-          <h5>Location: <%= posts[i].location%></h5>
-          <h5>Trail Name: <%= posts[i].trailName%></h5>
           <p><%= posts[i].caption%></p>
-        <section class="grid grid-cols-6">
+          </div>
+          <div class="col-start-3 col-span-1">
+            <h2 class="card-title"> <%= user.userName %></h2>
+            <div class="mb-2"><h5 class="font-bold">Location:</h5> <%= posts[i].location%></div>
+            
+            <div><h5 class="font-bold">Trail Name:</h5> <%= posts[i].trailName%></div>
+          </div>
+      </div>
+        <section class="grid grid-cols-6 card-body gap-0">
           <div col-start-1 col-span-3>
             <div class="rating rating-mdlg mt-2">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -76,6 +83,8 @@
         </div>
         <div class ="flex justify-end col-start-5">
           <button class="btn fa fa-comment bg-slate-900" type="submit"></button>
+          <!-- <h3>Comments: <%= posts[i].likes %></h3> -->
+          
         </div>
         <div class="flex justify-end col-start-6">
           <%if(posts[i].user == user.id){ %>
