--- a/views/post.ejs
+++ b/views/post.ejs
@@ -34,73 +34,31 @@
     </div>
 
     
-        
-    <div class="col-3 mt-5">
-      
-
-      
-        
-          <ul class="row list-unstyled">
-            <% for(var i=0; i<comment.length; i++) {%>
-              <!-- For loop iterating through the posts array and spitting out each image and anchor tag on the feeds page. -->
-              <li class="col-6 justify-content-between mt-5">
-                <%= comment[i].comment%>
-              </li>
-            <% } %>
-            </ul>
-      
-
-    </div>
+</div>  
+</section>
+  <div class="col-start7 col-span-3 col-3 mt-5">
+      <% for(var i=0; i<comment.length; i++) {%>
+        <div class="chat chat-start">
+          <div class="chat-image avatar">
+            <div class="w-10 rounded-full">
+              <img src="<%= user.profilePhoto%>" />
+            </div>
+          </div>
+          <div class="chat-bubble"><%= comment[i].comment%></div>
+        </div>
+      <% } %>
+      <form action="/comment/createComment/<%= post.id%>" method="POST">
+        <div class="mb-3">
+            <label for="comment" class="form-label">Comment</label>
+            <input type="text" class="form-control" id="comment" name="comment">
+        </div>
+        <div class="form-control mt-3">
+          <button class="btn btn-grey">Post</button>
+        </div>
+      </form>
   </div>
-
-
-
-  </section>
-    
-      <div class="row justify-content-between">
-        <form
-          class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
-          method="POST"
-        >
-       
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
-        </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
-        <%if(post.user == user.id){ %>
-        <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
-          method="POST"
-          class="col-3"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
-        </form>
-        <%}%>
-      
-    </div>
-    <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
-
-      
-        
-          <ul class="row list-unstyled">
-            <% for(var i=0; i<comment.length; i++) {%>
-              <!-- For loop iterating through the posts array and spitting out each image and anchor tag on the feeds page. -->
-              <li class="col-6 justify-content-between mt-5">
-                <%= comment[i].comment%>
-              </li>
-            <% } %>
-            </ul>
-      
-
-    </div>
-    <!-- Displays the post that user has clicked on. It shows post title, likes and post caption. There is no loop as it is a single post being shown. -->
-    <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
-    </div>
-    <!-- Buttons to return to profile and feed. -->
-  </div>
+</div>  
+</div>
 </div>
 
 <form action="/comment/createComment/<%= post.id%>" method="POST">
